# WeatherWatcherTUI

./: .gitignore  README.md  classes.py  interface.py  interface_config.py  log.txt  main.py  processing.py  pyproject.toml  ww.db
WeatherWatcherTUI/: main.py
WeatherWatcherTUI/configs/: api.json
WeatherWatcherTUI/interface/: interface_callbacks.py  interface_config.py  interface_main.py
WeatherWatcherTUI/processing/: processing_classes.py
WeatherWatcherTUI/utils/: text_logger.py
docs/processing/: test_plan_load_data.md
interface/: interface_callbacks.py  interface_classes.py  interface_main.py  ww.db
processing/: processing_classes.py  processing_main.py
sql/: schema.sql
test-plans/: test_plan_get_weather.md
tests/: conftest.py  test_load_data.py  test_processing.py
