[project]
name = "weatherwatcher"
version = "0.1.0"
description = "WeatherAPI TUI"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Ryan Hoveskeland", email = "ryanhoveskeland@protonmail.com" }]
dependencies = ["requests", "python-dotenv"]

[project.scripts]
weatherwatcher = "WeatherWatcherTUI.main:launcher"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["WeatherWatcherTUI*"]

[tool.setuptools.package-data]
"interface" = ["ww.db"]
"configs" = ["api.json"]
